[package]
name = "yew_css"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"
description = "CSS declarations inside of Rust for use with the Yew framework"

[dependencies]
stdweb = "0.4"
nom = "5.0.1"
smallvec = "0.6.10"


[workspace]
members = [
    "examples/demo"
]
