[package]
name = "demo"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew_css = { path = "../../" }
yew = { git = "https://github.com/yewstack/yew", branch="master" }
lazy_static = "1.4.0"