[package]
name = "demo"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
yew_css = { path = "../../" }
yew = { git = "https://github.com/yewstack/yew", branch="master" }
lazy_static = "1.4.0"
wasm-bindgen = "0.2.42"
log = "0.4.8"
web_logger = "0.2.0"
